# wavemaker-agent-framework

./: .gitignore  CHANGELOG.md  LICENSE  PHASE1_SUMMARY.md  PUBLISHING.md  README.md  agentfield-deployment-guide.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: api-reference.md  migration-guide.md
examples/campaign-planner/: __init__.py  agent.py
examples/content-writer/: __init__.py  agent.py
src/bigripple/: __init__.py
src/bigripple/api/: __init__.py  responses.py
src/bigripple/context/: __init__.py  context_injector.py
src/bigripple/core/: __init__.py  agent_runtime.py  client.py
src/bigripple/operations/: __init__.py
src/bigripple/strands/: __init__.py  agent.py
src/bigripple/testing/: __init__.py  base_fixtures.py
src/bigripple/testing/fixtures/: __init__.py  context_fixtures.py
src/bigripple/testing/mocks/: __init__.py  openai.py
src/bigripple/tools/: __init__.py  executor.py  registry.py  strands_tools.py
src/bigripple/tools/bigripple/: __init__.py  brand_tools.py  campaign_tools.py  content_tools.py  knowledge_tools.py
src/bigripple_agent_framework/: __init__.py
src/bigripple_agent_framework/api/: __init__.py  responses.py
src/bigripple_agent_framework/context/: __init__.py  context_injector.py  entity_context.py
src/bigripple_agent_framework/core/: __init__.py  agent_runtime.py  client.py  config.py
src/bigripple_agent_framework/operations/: __init__.py
src/bigripple_agent_framework/strands/: __init__.py  agent.py
src/bigripple_agent_framework/testing/: __init__.py  base_fixtures.py
src/bigripple_agent_framework/testing/fixtures/: __init__.py  context_fixtures.py
src/bigripple_agent_framework/testing/mocks/: __init__.py  bigripple.py  openai.py
src/bigripple_agent_framework/tools/: __init__.py  executor.py  registry.py
src/bigripple_agent_framework/tools/bigripple/: __init__.py  brand_tools.py  campaign_tools.py  content_tools.py  knowledge_tools.py
src/wavemaker_agent_framework/: __init__.py
src/wavemaker_agent_framework/api/: __init__.py  responses.py
src/wavemaker_agent_framework/context/: __init__.py  context_injector.py  rag_context.py
src/wavemaker_agent_framework/core/: __init__.py  agent_runtime.py  client.py  config.py
src/wavemaker_agent_framework/operations/: __init__.py  extractor.py  formatter.py  schemas.py
src/wavemaker_agent_framework/strands/: __init__.py  agent.py
src/wavemaker_agent_framework/testing/: __init__.py  fixtures.py
src/wavemaker_agent_framework/testing/fixtures/: __init__.py  context_fixtures.py
src/wavemaker_agent_framework/testing/mocks/: __init__.py  openai.py
src/wavemaker_agent_framework/tools/: __init__.py  definitions.py  executor.py  registry.py
src/wavemaker_agent_framework/tools/bigripple/: __init__.py  brand_tools.py  campaign_tools.py  content_tools.py  knowledge_tools.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_agent_execution.py
tests/integration/: __init__.py  test_agent_runtime.py
tests/unit/: test_client.py  test_config.py  test_fixtures.py  test_mocks.py  test_responses.py
tests/unit/test_context/: __init__.py  test_context_injector.py  test_entity_context.py
tests/unit/test_operations/: __init__.py  test_extractor.py
tests/unit/test_tools/: test_registry.py
